fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -374,3 +374,7 @@ h4 {
     background-color: #f9f9f9;
   }
 }
+
+body {
+  overflow-x: hidden !important;
+}
